mobile text align fixed

--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -89,6 +89,9 @@ body {
     box-shadow: 0 2px 20px white;
     transform: scale(1);
   }
+  .box {
+    text-align: left;
+  }
 }
 
 #name-box {
